--- a/companion/manifest.json
+++ b/companion/manifest.json
@@ -21,5 +21,6 @@
 		"entrypoint": "../dist/main.js"
 	},
 	"keywords": ["blackmagic", "videohub"],
-	"products": ["Blackmagic Videohub Panel"]
+	"products": ["Blackmagic Videohub Panel"],
+	"usbIds": []
 }
